"""
    SPDX-FileCopyrightText: Copyright 2022-2025 Julian Amann <dev@vertexwahn.de>
    SPDX-License-Identifier: Apache-2.0
"""

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "film",
    srcs = ["film.cpp"],
    hdrs = ["film.hpp"],
    visibility = ["//visibility:public"],
    deps = [":film_tile"],
)

cc_test(
    name = "film_test",
    size = "medium",
    srcs = [
        "film_test.cpp",
    ],
    data = [
        "//okapi/tests/images:filtered_images",
    ],
    deps = [
        ":film",
        "//flatland/rendering:sampler",
        "//imaging/io",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "film_tile",
    hdrs = ["film_tile.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":reconstruction_filter",
        "//core:reference_counted",
        "//imaging:image",
        "//math:axis_aligned_bounding_box",
        "//math:point",
        "//math:tensor",
    ],
)

cc_test(
    name = "film_tile_test",
    size = "medium",
    srcs = [
        "film_tile_test.cpp",
    ],
    data = [
        "//okapi/tests/images:filtered_images",
    ],
    deps = [
        ":film",
        "//flatland/rendering:sampler",
        "//imaging/io",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "reconstruction_filter",
    hdrs = ["reconstruction_filter.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//core:object",
        "//flatland/rendering:property_set",
        "//math:constants",
        "//math:util",
    ],
)

cc_test(
    name = "reconstruction_filter_test",
    size = "small",
    srcs = [
        "reconstruction_filter_test.cpp",
    ],
    data = [
        "//okapi/tests/images:filtered_images",
    ],
    deps = [
        ":reconstruction_filter",
        "//imaging/io",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "sensor",
    hdrs = ["sensor.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":film",
        "//core:exception",
        "//flatland/rendering/sensor",
    ],
)

cc_test(
    name = "sensor_test",
    size = "small",
    srcs = [
        "sensor_test.cpp",
    ],
    data = [
        "//okapi/scenes",
        "//okapi/tests/images",
    ],
    deps = [
        ":sensor",
        "//imaging/io",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "tile_generator",
    hdrs = ["tile_generator.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//math:point",
        "//math:vector",
    ],
)

cc_test(
    name = "tile_generator_test",
    size = "small",
    srcs = [
        "tile_generator_test.cpp",
    ],
    data = [
        "//okapi/scenes",
    ],
    deps = [
        ":film",
        ":tile_generator",
        "@googletest//:gtest_main",
    ],
)
