"""
    SPDX-FileCopyrightText: Copyright 2022-2023 Julian Amann <dev@vertexwahn.de>
    SPDX-License-Identifier: Apache-2.0
"""

package(
    default_visibility = ["//visibility:public"],
)

filegroup(
    name = "test_scene_files",
    srcs = [
        "ReferencingNonExistingObj.ao.okapi.xml",
    ],
)
